--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "league/oauth2-client",
+    "name": "effiana/oauth2-client",
     "description": "OAuth 2.0 Client Library",
     "license": "MIT",
     "config": {
         "sort-packages": true
     },
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.0|^8.0",
         "guzzlehttp/guzzle": "^6.0 || ^7.0",
         "paragonie/random_compat": "^1|^2|^9.99"
     },
